@@ -21,7 +21,8 @@ noinst_HEADERS=\
  inetsocket_p.h \
  libloader_p.h \
  process_p.h \
- mutex_p.h
+ mutex_p.h \
+ semaphore_p.h
 
 iheaderdir=$(gwenhywfar_headerdir_am)/gwenhywfar
 iheader_HEADERS=\
@@ -36,7 +37,9 @@ libosimpl_la_SOURCES=\
  init.c \
  libloader.c \
  process.c \
- mutex.c
+ mutex.c \
+ semaphore.c
+
 
 sources:
 	for f in $(libosimpl_la_SOURCES); do \
