@@ -24,7 +24,8 @@ noinst_HEADERS=\
  inetsocket_p.h \
  libloader_p.h \
  process_p.h \
- mutex_p.h
+ mutex_p.h \
+ semaphore_p.h
 
 iheaderdir=$(gwenhywfar_headerdir_am)/gwenhywfar
 iheader_HEADERS=\
@@ -39,7 +40,8 @@ libosimpl_la_SOURCES=\
  init.c \
  libloader.c \
  process.c \
- mutex.c
+ mutex.c \
+ semaphore.c
 
 
 sources:
